exports[`test renders correctly 1`] = `
<View>
  <View>
    <View
      style={
        Object {
          "marginLeft": 0,
          "marginRight": 0,
        }
      }>
      <Text
        accessible={true}
        allowFontScaling={true}
        ellipsizeMode="tail"
        numberOfLines={0}
        style={
          Array [
            Object {
              "fontSize": 17,
            },
            Object {
              "fontSize": 16,
              "lineHeight": 20,
              "marginBottom": 20,
            },
            Object {
              "fontFamily": "AGaramondPro-Regular",
            },
          ]
        }>
        This is some example text
      </Text>
    </View>
    <View
      style={
        Array [
          Object {
            "backgroundColor": "#e5e5e5",
            "height": 1,
            "marginLeft": -20,
            "marginRight": -20,
          },
          Object {
            "marginBottom": 20,
          },
        ]
      } />
  </View>
</View>
`;

exports[`test shows trending artists correctly 1`] = `
<View>
  <View>
    <View
      style={
        Object {
          "marginLeft": 0,
          "marginRight": 0,
        }
      }>
      <Text
        accessible={true}
        allowFontScaling={true}
        ellipsizeMode="tail"
        numberOfLines={0}
        style={
          Array [
            Object {
              "fontSize": 17,
            },
            Object {
              "fontSize": 16,
              "lineHeight": 20,
              "marginBottom": 20,
            },
            Object {
              "fontFamily": "AGaramondPro-Regular",
            },
          ]
        }>
        This is some example text
      </Text>
    </View>
    <View
      style={
        Array [
          Object {
            "backgroundColor": "#e5e5e5",
            "height": 1,
            "marginLeft": -20,
            "marginRight": -20,
          },
          Object {
            "marginBottom": 20,
          },
        ]
      } />
  </View>
  <View
    onLayout={[Function]}
    style={
      Object {
        "flexDirection": "column",
      }
    }>
    <Text
      accessible={true}
      allowFontScaling={true}
      ellipsizeMode="tail"
      numberOfLines={1}
      style={
        Array [
          Object {
            "fontSize": 17,
          },
          Object {
            "fontSize": 20,
          },
          Object {
            "fontFamily": "AGaramondPro-Regular",
          },
        ]
      }>
      Related Artists
    </Text>
    <View
      style={
        Object {
          "alignItems": "flex-start",
          "flexDirection": "row",
          "flexWrap": "wrap",
          "justifyContent": "space-around",
          "marginLeft": -10,
          "marginRight": -10,
          "marginTop": 12,
        }
      }>
      <TouchableWithoutFeedback
        onPress={[Function]}>
        <View
          style={
            Object {
              "margin": 5,
              "paddingBottom": 20,
              "width": 157,
            }
          }>
          <ImageView
            imageURL=""
            style={
              Object {
                "height": 105,
                "width": 157,
              }
            } />
          <Text
            accessible={true}
            allowFontScaling={true}
            ellipsizeMode="tail"
            style={
              Object {
                "fontFamily": "Avant Garde Gothic ITCW01Dm",
                "fontSize": 12,
                "marginTop": 10,
                "textAlign": "left",
              }
            }>
            ARTIST NAME
          </Text>
          <Text
            accessible={true}
            allowFontScaling={true}
            ellipsizeMode="tail"
            style={
              Object {
                "color": "#666666",
                "fontFamily": "AGaramondPro-Regular",
                "fontSize": 16,
                "marginTop": 5,
              }
            }>
            6 works for sale
          </Text>
        </View>
      </TouchableWithoutFeedback>
      <View
        style={
          Object {
            "height": 105,
            "width": 157,
          }
        } />
    </View>
  </View>
</View>
`;
